# quantum-testing

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  qiea_demo.py
.github/workflows/: ci.yml
artifacts/defects4j-benchmark/lang1-numberutils-12-30seeds/: comparison.json  config.json  raw_runs.csv  raw_runs.jsonl  result.json  summary.json
artifacts/defects4j-benchmark/lang1-numberutils-24-30seeds/: comparison.json  config.json  raw_runs.csv  raw_runs.jsonl  result.json  summary.json
configs/: README.md  medium-harvest.yaml  quick-harvest.yaml
docs/: CONTRIBUTING.md  ENV.md  RUNBOOK.md  arxiv-2604-26674-comparison.md  defects4j-benchmark.md  paper-artifact-plan.md  research-comparison.md
docs/paper_metrics/: example_2604_26674.json
examples/: cit_model.json  coverage_matrix.csv
research/: README.md
research/context/: 00-RESEARCH-OVERVIEW.md  01-DEEP-RESEARCH.md  02-ALGORITHM-DESIGN.md  03-PAPER-OUTLINE.md  04-REFERENCES.md  05-HARDWARE-NOTES.md
src/quantum_testing/: __init__.py  batch_harvest.py  cli.py  experiment_runner.py  metrics.py  multiobjective.py  statistical_tests.py  visualization.py
src/quantum_testing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_combinatorial.py  test_coverage.py  test_coverage_qubo.py  test_defects4j_adapter.py  test_defects4j_benchmark.py  test_enhanced_qiea.py  test_multiobjective.py  test_nsga3.py  test_qaoa.py  test_qiea.py  test_qubo_exact.py  test_sa_benchmark.py  test_statistical.py  test_visualization.py
(+27 files in other folders)
